# fizz-buzz-ai

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  format.yml  jekyll-gh-pages.yml  lint.yml
buzz_cli/: Cargo.toml
buzz_cli/src/: fizz-cli.rs
fizz-buzz-ai-docs/: Gemfile  _config.yml
fizz_buzz_ai_docs/_posts/: 2024-05-28-buzzing-to-fizz.markdown
