[package]
authors = [
  "Pickles"
]
description = "Solving the unsolvable"
documentation = "https://pickles-bread-and-butter.github.io/fizz-buzz-ai/"
edition = "2021"
homepage = "https://github.com/pickles-bread-and-butter/fizz-buzz-ai/tree/main/buzz_cli"
name = "buzz_cli"
version = "0.1.0"
repository = "https://github.com/pickles-bread-and-butter/fizz-buzz-ai"
rust-version = "1.80.0"

[[bin]]
edition = "2021"
name = "fizz-cli"
path = "src/fizz-cli.rs"

[dependencies]
clap = {version = "4.5.11", features = ["cargo", "derive"]}
